# mandelbrot_set

./: .gitignore  Cargo.toml  README.md
src/: main.rs  mandelbrot_calculation.rs  ui.rs
src/ui/: canvas.rs  message.rs  viewer.rs
