[package]
name = "mandelbrot_set"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.1"
piston_window = "0.120.0"
plotters-piston = {git = "https://github.com/plotters-rs/plotters-piston"}